added ngmin instead of concat base configuration for Facebook API Facebook async init bootstraps the application. Global resolver in angular constant defaultRouteConfig.js which can be used to append a login verification to all routes

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "dependencies": {
         "grunt": "*",
         "karma": "*",
+        "grunt-ngmin": "*",
         "grunt-exec": "*",
         "grunt-contrib-uglify": "*",
-        "grunt-contrib-concat": "*",
         "grunt-contrib-copy": "*",
         "grunt-contrib-watch": "*",
         "grunt-contrib-less": "*"
